# stresstest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
stresstest/: __main__.py  errors.py  runner.py  sensors.py  stresstest.py
stresstest/stresstests/compute/: factorization.py  hashlib.py  n_body.py  pi_digits.py
stresstest/stresstests/interpreter/: dict_class.py  random_module.py
