[tool.poetry]
authors = ["Tomas Krejci <tomas@krej.ci>"]
description = "Stress test your system and Python interpreter."
license = "AGPL"
name = "stresstest"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"
rich = "*"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
stresstest = 'stresstest.__main__:main'

[tool.black]
include = '\.pyi?$'
line-length = 88
preview = false
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = "black"
src_paths = ["stresstest"]
